tests/spec/emit/snapshots/ufcs_receiver_method_deref_parenthesized.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Box { x: int }
  
  impl Box {
    fn add(self, y: int) -> int { self.x + y }
  }
  
  fn make_ref() -> Ref<Box> { &Box { x: 1 } }
  
  fn main() {
    let _ = Box.add(make_ref().*, 1);
  }
---
package main

type Box struct {
	x int
}

func (b Box) add(y int) int {
	return b.x + y
}

func makeRef() *Box {
	return &Box{x: 1}
}

func main() {
	(*makeRef()).add(1)
}
