tests/spec/emit/snapshots/ufcs_slice_append_statement_writeback.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn main() {
    let mut s = [1]
    s = Slice.append(s, 2)
    let _ = s[1]
  }
---
package main

func main() {
	s := []int{1}
	s = append(s, 2)
	_ = s[1]
}
