tests/spec/emit/snapshots/ufcs_stringer_on_specialized_impl_does_not_suppress_auto.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct Box<T> { v: T }\n\nimpl Box<int> {\n  fn String(self) -> string {\n    \"int_box\"\n  }\n}\n\nfn main() {\n  let _ = Box { v: 42 }\n}\n"
---
package main

type Box[T any] struct {
	v T
}

func Box_String(_ Box[int]) string {
	return "int_box"
}

func main() {
	_ = Box[int]{v: 42}
}
