tests/spec/emit/snapshots/unary_double_negation_cannot_lex_as_decrement.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test(x: int) -> int {
    - -x
  }
---
package main

func test(x int) int {
	return -(-x)
}
