tests/spec/emit/snapshots/unary_logical_not.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> bool {
    !true
  }
---
package main

func test() bool {
	return !true
}
