tests/spec/emit/snapshots/unary_negation.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> int {
    -42
  }
---
package main

func test() int {
	return -42
}
