tests/spec/emit/snapshots/unary_not_does_not_flip_comparison_inside_call_argument.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn always_false(b: bool) -> bool { false }
  
  fn test(x: int, y: int) -> bool {
    !always_false(x == y)
  }
---
package main

func alwaysFalse(_ bool) bool {
	return false
}

func test(x, y int) bool {
	return !alwaysFalse(x == y)
}
