tests/spec/emit/snapshots/unary_not_skips_operator_text_inside_string_literal.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test(s: string) -> bool {
    !("x == y" == s)
  }
---
package main

func test(s string) bool {
	return "x == y" != s
}
