tests/spec/emit/snapshots/underscore_prefix_binding_discarded.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(opt: Option<int>) -> string {
    match opt {
      Some(_x) => "has value",
      None => "none",
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(opt lisette.Option[int]) string {
	if opt.Tag == lisette.OptionSome {
		return "has value"
	}
	return "none"
}
